--- a/mail/index.html
+++ b/mail/index.html
@@ -8,7 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <div id="mail"></div>
+  <div class="container text-center mt-5">
+    <div id="mail"></div>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
